Fix spacing between links in nav bar

--- a/src/components/page.module.css
+++ b/src/components/page.module.css
@@ -3,11 +3,15 @@
   height: 50px;
   top: 0;
   width: 100%;
-  padding: 10px;
+  padding: 20px;
 }
 
 .content {
-  padding: 10px;
+  padding: 20px;
   position: relative;
   top: 50px;
+}
+
+.navbar a + a {
+  margin-left: 1rem;
 }
